# TomatoTask

./: .gitignore  .mailmap  ANIMATIONS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPLEMENTATION_STATUS.md  LICENSE  OPTIMIZATION.md  PIXEL_ART_GUIDE.md  PR_DESCRIPTION.md  README.md  SECURITY.md  check_output.txt  check_output_final.txt  convert-sounds.ps1  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
.claude/commands/: speckit.analyze.md  speckit.checklist.md  speckit.clarify.md  speckit.implement.md  speckit.plan.md  speckit.specify.md
.github/workflows/: build.yml  check.yml  release.yml  security.yml
.specify/memory/: constitution.md
.specify/plans/: implementation-plan.md
.specify/specs/: tomatotask-core.md
.specify/tasks/: tasks.md
flatpak/: FLATHUB_SUBMISSION.md  README.md  com.tomatotask.app.metainfo.xml  com.tomatotask.app.yml  flathub.json
public/icons/: README.md
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  notifications.rs  tray.rs  utils.rs
src-tauri/src/commands/: backup.rs  mod.rs  projects.rs  sessions.rs  settings.rs  stats.rs  summary.rs  tasks.rs
src-tauri/src/db/: connection.rs  migrations.rs  mod.rs  models.rs
src-tauri/src/db/queries/: mod.rs  projects.rs  sessions.rs  settings.rs  stats.rs  tasks.rs
src/lib/components/effects/: AnimatedCounter.svelte  BackgroundParticles.svelte  Confetti.svelte  Toast.svelte  ToastContainer.svelte  TomatoLoader.svelte
src/lib/components/keyboard/: ShortcutsHelp.svelte
src/lib/components/onboarding/: OnboardingFlow.svelte
src/lib/components/projects/: ProjectForm.svelte  ProjectHeader.svelte  ProjectList.svelte  ProjectModal.svelte
src/lib/components/settings/: LanguageSelector.svelte  SettingsPanel.svelte  ThemeToggle.svelte
src/lib/i18n/: de.json  en.json  es.json  fr.json  it.json
src/lib/services/: backup-service.ts  i18n-service.ts  notification-service.ts  sound-service.ts  stats-service.ts  summary-service.ts  task-service.ts  timer-service.ts  window-service.ts
src/lib/stores/: projects.svelte.ts  settings.svelte.ts  tasks.svelte.ts  timer.svelte.ts  toast.svelte.ts
src/lib/types/: index.ts  settings.ts  stats.ts  task.ts  timer.ts
src/lib/utils/: index.ts  keyboard.ts  time-formatter.ts  validators.ts
(+19 files in other folders)
