[package]
name = "tomatotask"
version = "1.0.8"
description = "An intuitive Pomodoro timer with integrated TodoList for productivity and time management."
authors = ["AnthonyMahe <anthony.mahe@example.com>"]
license = "MIT"
repository = "https://github.com/AnthonyMahe/TomatoTask"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.6.2", features = ["tray-icon"] }
tauri-plugin-log = "2"
thiserror = "2.0.12"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = "0.4"

[lints.clippy]
all = { level = "warn", priority = -1 }
correctness = "deny"
suspicious = "deny"
complexity = "warn"
perf = "warn"
style = "warn"
