[package]
name = "tomatotask"
version = "1.1.0"
description = "An intuitive Pomodoro timer with integrated TodoList for productivity and time management."
authors = ["AnthonyMahe <anthony.mahe@example.com>"]
license = "MIT"
repository = "https://github.com/AnthonyMahe/TomatoTask"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.6.2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
thiserror = "2.0.12"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = "0.4"

[profile.release]
opt-level = "z"        # Optimize for size
lto = true             # Enable Link Time Optimization
codegen-units = 1      # Better optimization
strip = true           # Strip symbols from binary
panic = "abort"        # Smaller panic runtime

[lints.clippy]
all = { level = "warn", priority = -1 }
correctness = "deny"
suspicious = "deny"
complexity = "warn"
perf = "warn"
style = "warn"
